--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,10 +39,10 @@ jobs:
           npm ci
       - name: Build
         run: |
-          npm run build -- --prod
+          npm run build --prod
       - name: Lint
         run: |
           npm run lint
       - name: Test
         run: |
-          npm run test -- --prod
+          npm run test --prod
