--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,6 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm run test --watch=false --browsers=ChromeHeadlessCI
+        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
       - name: Build
         run: npm run build:prod
